Fix the collection controls display on mobile

--- a/app/packs/stylesheets/helsinki/modules/_controls.scss
+++ b/app/packs/stylesheets/helsinki/modules/_controls.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   gap: 1rem;
 
-  @include breakpoint(medium){
+  @include breakpoint(smallmedium){
     flex-direction: row;
     justify-content: flex-end;
   }
